# adabot

./: .gitignore  .travis.sh  .travis.yml  LICENSE  README.md  adabot.xacro
adabot_control/: CMakeLists.txt  package.xml
adabot_control/config/: adabot.control.yaml
adabot_control/launch/: adabot.control.0.launch  adabot.control.1.launch  adabot.control.2.launch  adabot.control.3.launch  adabot.control.4.launch  adabot.control.5.launch  adabot.control.6.launch  adabot.control.7.launch  adabot.control.8.launch  adabot.control.9.launch  (+1 more)
adabot_desc-temp/: CMakeLists.txt
adabot_description/: CMakeLists.txt  package.xml
adabot_gaze-temp/: CMakeLists.txt
adabot_gazebo/: CMakeLists.txt  package.xml
adabot_gazebo/launch/: adabot.world.launch  adabot_world.launch
adabot_gazebo/worlds/: adabot.empty.world  adabot.fast-rocky3.world  adabot.fast-step.world  adabot.rocky.world  adabot.rocky3.world  adabot.step.world
adabot_gazebo/worlds/worldModels/Step/: model.config  model.sdf
adabot_gazebo/worlds/worldModels/rocky/: model.config  model.sdf
adabot_gazebo/worlds/worldModels/rocky/meshes/: rocky2.stl  rocky3.stl
adabot_gazebo/worlds/worldModels/rocky3/: model.config  model.sdf
adabot_gazebo/worlds/worldModels/rocky3/blender/: generate_rocky.py  rocky.blend  rocky.blend1  rocky.stl  rocky.world
adabot_gazebo/worlds/worldModels/rocky3/meshes/: rocky1.stl  rocky2.stl  rocky3.stl
adabot_gazebo/worlds/worldModels/rockySurface/: model.config
adabot_gazebo/worlds/worldModels/twinPeaks/: model.config  model.sdf
adabot_gazebo/worlds/worldModels/twinPeaks/meshes/: TwinPeaks.dae
adabot_localization/: CMakeLists.txt  package.xml
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
src/adabot_description/: package.xml
src/adabot_description/launch/: display.launch
src/adabot_description/urdf/: adabot.urdf  adabot.xacro
(+38 files in other folders)
