<?xml version="1.0"?>
<package>
  <name>adabot_gazebo</name>
  <version>0.1.0</version>
  <description>Launching and testing adabot in Gazebo</description>

  <maintainer email="ajc@todo.todo">Anthony J. Clark</maintainer>

  <license>MIT</license>
  <url type="website">http://github.com/anthony-jclark/adabot</url>

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_row_control</run_depend>
  
  <run_depend>adabot_description</run_depend>

  <run_depend>xacro</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
