<?xml version="1.0"?>
<package>
    
  <name>adabot_description</name>
  <version>0.1.0</version>
  <description>An initial package for creating the adabot </description>

  <maintainer email="ajc@todo.todo">Anthony J. Clark</maintainer>

  <license>MIT</license>
  <url type="website">https://github.com/anthony-jclark/adabot</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>urdf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>

